@@ -5,7 +5,7 @@ use warnings;
 
 use Test::More;
 
-use Test::XML tests => 21;
+use Test::XML tests => 24;
 
 use File::Spec;
 
@@ -21,6 +21,7 @@ my @tests = (qw(
         with-blockquote
         with-programlisting
         with-xml-lang-attribute
+        with-xml-lang-attr-in-section
     ));
 
 sub load_xml
@@ -38,7 +39,7 @@ sub load_xml
     return $contents;
 }
 
-# TEST:$num_texts=7
+# TEST:$num_texts=8
 
 my $converter = XML::Grammar::Fiction::ToDocBook->new({
         data_dir => File::Spec->catdir(File::Spec->curdir(), "extradata"),
